Add .gitignore file to exclude PDFs and other common files

--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,42 @@ products_vectorstore/
 # ignore optimized C++ code from being checked into repo
 week4/optimized
 week4/simple
+
+# PDF files
+*.pdf
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
